# app/Http/Resources/QuestionResource.php
@@ -3,6 +3,7 @@
 namespace App\Http\Resources;
 
 use Illuminate\Http\Resources\Json\JsonResource;
+use App\Http\Resources\AnswerResource;
 
 /**
  * @OAS\Schema(
@@ -16,17 +17,19 @@ use Illuminate\Http\Resources\Json\JsonResource;
 class QuestionResource extends JsonResource
 {
     /**
-     * @OAS\Property()
-     * @var string
+     * @OAS\Property(property="id",type="integer")
+     * @OAS\Property(property="question",type="string")
+     * @OAS\Property(property="answers",type="Answers")
+     *
+     * @return array
      */
-    private $question;
 
     public function toArray($request)
     {
         return [
             'id'        => $this->id,
             'question'  => $this->question,
-            'answers'   => AnswerResource::collection($this->whenLoaded('answer'))
+            'answers'   => AnswerResource::collection($this->whenLoaded('answers'))
         ];
     }
 }
